# pis24z-flashcards-app

./: .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  docker-compose-blue.yml  docker-compose-green.yml  docker-compose.yml  requirements.txt
database/: Dockerfile  data.sql  init.sql  migrate_elasticsearch.py  migrate_minio.py
docs/: wymagania.md  zrodla.md
docs/architecture/: c4_code.txt
scripts/: init_script.sh  initialize_nexus.groovy
src/: main.py  settings.py
src/gui/: Dockerfile  main.dart
src/gui/components/: component.dart
src/gui/flashcards/: pubspec.yaml
src/gui/flashcards/lib/: main.dart  (+1 more)
src/gui/flutter/: Dockerfile  README.md  pubspec.yaml
src/logic/: Dockerfile  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  wait-for-postgres.sh
src/logic/api/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
src/logic/api/fixtures/: 01-users.json  02-flashcardsets.json  03-flashcards.json  04-tags.json  05-flashcardsettags.json  06-flashcardsetfavourites.json  07-flashcardfavourites.json  08-flashcardsetstats.json  09-flashcardstatssimple.json  10-flashcardstatsstages.json  11-flashcardstatspercent.json
src/logic/api/migrations/: 0001_initial.py  0002_alter_flashcardsettag_set_alter_flashcardsettag_tag_and_more.py  0002_rename_password_hash_user_password_user_auth_user.py  0003_alter_flashcardsetstats_user_and_more.py
src/logic/api/tests/: conftest.py  test_models.py  test_views.py  tests.py
src/logic/backend/: settings.py  urls.py
src/logic/tests/: conftest.py  test_sample_logic.py
src/logic/tests/api/: test_models.py  test_views.py
tests/: test_main.py
tests/gui/: test_main.dart
tests/logic/: test_sample_logic.py
(+58 files in other folders)
