[tool.poetry]
name = "pis24z--logic"
version = "0.1.0"
description = "Flashcards-app logic written in Django"
authors = ["Jakub Bąba <jakub.baba.stud@pw.edu.pl>", "Michał Brzeziński <michal.brzezinski4.stud@pw.edu.pl>", "Angelika Ostrowska <angelika.ostrowska.stud@pw.edu.pl>", "Kacper Straszak <kacper.straszak.stud@pw.edu.pl>", "Jakub Śledź <jakub.sledz.stud@pw.edu.pl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.3"
pytest = "^8.3.3"
psycopg2-binary = "^2.9.10"
flake8 = "^7.1.1"
hypothesis = "^6.119.4"

#[[tool.poetry.source]]
#name = "nexus"
#url = "http://nexus:8081/repository/pis24z-dependencies/"
#default = true
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
pytest-django = "^4.9.0"
pytest-cov = "^6.0.0"
drf-yasg = "*"
djangorestframework-simplejwt = "^5.4.0"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
